@@ -1,0 +1,3 @@
+explain auto *p
+             ^
+14: error: "auto" with pointer declarator not supported in C
